--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ python = "^3.11"
 requests = "2.28.1"
 scikit-learn = "^1.3.2"
 pandas = "^2.2.0"
+fastapi = "^0.109.0"
+uvicorn = {extras = ["standard"], version = "^0.27.0"}
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.11.0"
