test: api tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ pytest = "^7.4.4"
 ruff = "^0.1.6"
 toml-sort = "^0.23.1"
 tqdm = "^4.66.1"
+httpx = "^0.26.0"
 
 [tool.ruff]
 # Exclude a variety of commonly ignored directories.
